# HackerNewsBestWithSummary

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  feed.xml  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: check-llm-versions.yml  ci.yml  cycle.yml  deploy-pages.yml
artefacts/: archive-best.html  archive-hn.html  archive.html  feed.fr.xml  feed.xml  feed.xsl
artefacts/a/: 04dea53e.html  05126279.html  069fa39d.html  079ebc09.html  080c6784.html  0b24255a.html  103ac50f.html  1340adc9.html  1615faee.html  19ac0790.html  1c11f7da.html  20f37101.html  2e5b90bc.html  35729d3a.html  381f52af.html  4137875d.html  4243564d.html  4ed46646.html  561ee7a0.html  56836e22.html  6a6ed23f.html  70e6b044.html  73ab13af.html  76f723d1.html  7acc9982.html  7c1db6ef.html  7f1e7207.html  80b1dcd9.html  81115cbc.html  82f3a9da.html  88fe267d.html  93f90034.html  9472ab17.html  94ae81ab.html  95cece89.html  961cf3fe.html  964cecdb.html  9b4bdb1e.html  a56126f6.html  b958a81b.html  (+15 more)
articles/2026/04/19/: 7acc9982.md  93f90034.md  e57944f4.md
articles/2026/04/20/: 05126279.md  1340adc9.md  1c11f7da.md  381f52af.md  4ed46646.md  73ab13af.md  7c1db6ef.md  80b1dcd9.md  82f3a9da.md  95cece89.md  a56126f6.md  d0652d0e.md
articles/2026/04/21/: 103ac50f.md  19ac0790.md  20f37101.md  4137875d.md  561ee7a0.md  82f3a9da.md  961cf3fe.md  9b4bdb1e.md  c52eb146.md  d1e684ce.md  e57944f4.md
articles/2026/04/22/: 0b24255a.md  3755055c.md  (+10 more)
artifacts/: feed.xsl
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SELF_HOSTING.md  feedly-refresh.md  last-refresh.json  llm-cost.json  usage-daily.json  usage.json
scripts/: annotate_placeholder_reasons.py  regen_article_summaries.py
src/app/: archive.py  article_pages.py  check_models.py  cli.py  config.py  feedly_lag.py  fetch_article.py  fetch_discussion.py  html_text.py  llm.py  logging_setup.py  models.py  pipeline.py  proxy.py  publish.py  refresh_discussions.py  rss_in.py  storage.py  summarize.py  usage.py
tests/: conftest.py  test_archive.py  test_article_pages.py  test_check_models.py  test_cli.py  test_config.py  test_feedly_lag.py  test_fetch_article.py  test_fetch_discussion.py  test_llm.py  test_pipeline.py  test_publish.py  test_refresh_discussions.py  test_rss_in.py  test_storage.py  test_summarize.py  test_usage.py
(+1993 files in other folders)
