[project]
name = "hn-best-summary"
version = "0.1.0"
description = "Republishes the Hacker News Best feed with LLM-generated article and discussion summaries."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.27",
    "trafilatura>=2.0",
    "python-frontmatter>=1.1",
    "feedgen>=1.0",
    "markdown-it-py>=4.0.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.25.0",
    "tenacity>=9.0",
    "structlog>=24.4",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-httpx>=0.32",
    "pyright>=1.1.409",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[project.scripts]
app = "app.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
