[project]
name = "hn-best-summary"
version = "0.1.0"
description = "Republishes the Hacker News Best feed with LLM-generated article and discussion summaries."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.27",
    "trafilatura>=2.1.0",
    "python-frontmatter>=1.3.0",
    "feedgen>=1.0",
    "markdown-it-py>=4.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "typer>=0.26.7",
    "tenacity>=9.0",
    "structlog>=26.1.0",
    "youtube-transcript-api>=1.2.4",
    "pypdfium2>=5.10.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-httpx>=0.32",
    "pyright>=1.1.410",
    "ruff>=0.15.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[project.scripts]
app = "app.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
